Updated License, Names and Links to Repos

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.1.0",
   "type": "library",
   "unity": "2018.1",
-  "description": "LibrarIoh.Unity.Pools (https://github.com/SorceressSpell/LibrarIoh.Unity.Pools)\n\nLibrarIoh's Pool of GameObjects for Unity.\n\nDepends on:\n  - LibrarIoh.Collections (https://github.com/SorceressSpell/LibrarIoh.Collections)\n  - LibrarIoh.Core (https://github.com/SorceressSpell/LibrarIoh.Core)",
+  "description": "LibrarIoh.Unity.Pools (https://github.com/SorceryStory/LibrarIoh.Unity.Pools)\n\nLibrarIoh's Pool of GameObjects for Unity.\n\nDepends on:\n  - LibrarIoh.Collections (https://github.com/SorceryStory/LibrarIoh.Collections)\n  - LibrarIoh.Core (https://github.com/SorceryStory/LibrarIoh.Core)",
   "dependencies": {
     "com.sorceressspell.librarioh.collections": "0.2.0",
     "com.sorceressspell.librarioh.core": "0.3.0"
   },
   "author": {
-    "name": "Sorceress' Spell",
+    "name": "Joana Almeida",
     "email": "Sorceress.Spell@gmail.com",
     "url": "http://SorceressSpell.com"
   },
